2017-03-XX   1.5.5:
-------------------
  * proved access to LD_LIBRARY_PATH in Linux install scripts by stroring it
    as OLD_LD_LIBRARY_PATH
  * replace '//' by '/' for install.py --root-prefix option
  * turn error about wrong menu_packages into warning


2017-02-16   1.5.4:
-------------------
  * skip binary prefix replacement on Windows, #62
  * add writing empty conda-meta/history upon installation


2017-01-31   1.5.3:
-------------------
  * update Visual Studio version map to with with Python 3.6 on Windows
  * add unicode line, update version comment, #61
  * add --clean (cache) option


2017-01-12   1.5.2:
-------------------
  * unlink files prior to writing with a new prefix, #58
  * fix test against NSIS 3.01


2017-01-06   1.5.1:
-------------------
  * add --cache-dir option, which defaults to CONSTRUCTOR_CACHE when set,
    or ~/.conda/constructor otherwise
  * fix typo


2016-11-07   1.5.0:
-------------------
  * add -u (update) option to resulting .sh installer, see #46


2016-10-20   1.4.2:
-------------------
  * allow '-' character in version


2016-10-19   1.4.1:
-------------------
  * add simple check for valid name and version


2016-10-06   1.4.0:
-------------------
  * add menu_packages key in construct.yaml


2016-09-15   1.3.4:
-------------------
  * add -s option to shell installer to run without executing user-defined
    scripts, basically #44
  * allow NSIS 3 to be used to Windows


2016-09-12   1.3.3:
-------------------
  * add support for 'noarch' packages


2016-08-11   1.3.2:
-------------------
  * bug: allow '-' in package name, when using 'exlcude' key


2016-07-19   1.3.1:
-------------------
  * add pkgs/urls.txt to be compatible with current conda
  * add 'md5' and 'installed_by' keys to conda-meta/<dist>.json metadata
    for installed packages


2016-07-08   1.3.0:
-------------------
  * add ability to run `post-link` scripts (inside conda packages) on Windows